force-app/zurich-base/main/default/objects/Error_Log__c/Error_Log__c.object-meta.xml
<CustomObject>
    <label>Error Log</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>