force-app/zurich-base/main/default/objects/Error_Log__c/fields/Job_ID__c.field-meta.xml
<CustomField>
    <fullName>Job_ID__c</fullName>
    <label>Job ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>