force-app/zurich-base/main/default/objects/Error_Log__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>error</fullName>
                <default>true</default>
                <label>error</label>
            </value>
            <value>
                <fullName>warning</fullName>
            </value>
            <value>
                <fullName>critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>