force-app/zurich-base/main/default/objects/Error_Log__c/fields/Record_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Record_External_ID__c</fullName>
    <label>Record External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>