force-app/zurich-base/main/default/objects/Error_Log__c/fields/Record_Object__c.field-meta.xml
<CustomField>
    <fullName>Record_Object__c</fullName>
    <label>Record Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>