force-app/zurich-base/main/default/objects/Error_Log__c/fields/Throwing_Time__c.field-meta.xml
<CustomField>
    <fullName>Throwing_Time__c</fullName>
    <label>Throwing Time</label>
    <type>DateTime</type>
</CustomField>