force-app/zurich-base/main/default/objects/Error_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Record_External_ID__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Message__c</columns>
    <columns>Stack_Trace__c</columns>
    <columns>Level__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>